# newtype-derive-2018

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
src/: lib.rs
tests/: arith.rs  arith_generic.rs  deref_index.rs  fmt.rs  from.rs  issue-5-pub-interior-field.rs  star_forms.rs
