[package]
edition = "2018"
name = "newtype-derive-2018"
version = "0.0.2"
authors = ["warlock <internalmike@gmail.com>"]
description = "This crate provides macros for deriving common traits for newtype structures."
readme = "README.md"
documentation = "https://docs.rs/newtype-derive-2018/"
keywords = ["newtype", "derive", "custom_derive", "macro", "macro-attr"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/newtype-derive-2018"

[dependencies]
generics = "0.3.0"

[dev-dependencies]
macro-attr-2018 = "1.1.1"
